Replacing background-position for background-attachment:fixed

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     background-color: #638a79;
     background-image: url("img/body-bg.png");
     background-repeat: repeat-x;
-    background-position: fixed;
+    background-attachment: fixed;
     font-size: 13px;
     line-height: 18px;
     color: #333;
